--- a/src/app/components/exhibitions/inspectors/corridor/corridor-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/corridor/corridor-inspector.component.html
@@ -40,3 +40,5 @@
 
 <h4 class="mat-h4">Entrypoint</h4>
 <app-vector3f-input [vector]="corridor.entrypoint" [name]="'Entrypoint'" [show]="[true, false, true]" [labels]="['Entrypoint (x)', null, 'Entrypoint (y)']"></app-vector3f-input>
+
+<h4 class="mat-h4">Corridor connects Rooms:</h4>
