--- a/src/app/components/exhibitions/edit-exhibition.component.html
+++ b/src/app/components/exhibitions/edit-exhibition.component.html
@@ -5,6 +5,7 @@
         <app-room-inspector *ngIf="(isSelectedRoom|async)" [room]="(inspected|async)"></app-room-inspector>
         <app-wall-inspector *ngIf="(isSelectedWall|async)" [wall]="(inspected|async)"></app-wall-inspector>
         <app-exhibit-inspector *ngIf="(isSelectedExhibit|async)" [exhibit]="(inspected|async)"></app-exhibit-inspector>
+        <app-corridor-inspector *ngIf="(isSelectedCorridor|async)" [corridor]="(inspected|async)"></app-corridor-inspector>
     </mat-drawer>
     <div class="content" *ngIf="!!(exhibition|async)" (click)="exhibitionClicked($event)">
         <h1 class="mat-h1">Exhibition dashboard: {{(exhibition|async).name}} (ID={{(exhibition|async).shortId}})</h1>
