--- a/src/app/components/exhibitions/edit-exhibition.component.html
+++ b/src/app/components/exhibitions/edit-exhibition.component.html
@@ -98,6 +98,85 @@
                     </mat-tree-node>
                 </mat-tree>
             </div>
+
+
+
+
+
+
+
+          <div *ngFor="let corridor of (exhibition|async).corridors" (click)="corridorClicked($event, corridor)" [className]="(inspected|async)==corridor ? 'corridor-widget selected' : 'corridor-widget'">
+
+            <div [style.display]="'flex'" [style.justify-content]="'space-between'">
+              <h2 class="mat-h2">{{corridor.text}}</h2>
+              <button mat-mini-fab color="warn" matTooltip="Delete corridor '{{corridor.text}}' from exhibition." (click)="removeCorridor(corridor)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+
+            <mat-tree [dataSource]="[corridor]" [treeControl]="treeControl" class="corridor-tree">
+
+              <mat-nested-tree-node *matTreeNodeDef="let node; when: isCorridor">
+                <ng-container matTreeNodeOutlet></ng-container>
+              </mat-nested-tree-node>
+
+              <mat-nested-tree-node *matTreeNodeDef="let node; when: isWallFiller">
+                <li>
+                  <div class="mat-tree-node">
+                    <button mat-icon-button matTreeNodeToggle>
+                      <mat-icon class="mat-icon-rtl-mirror">
+                        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                      </mat-icon>
+                    </button>
+                    Walls ({{node.length}})
+                  </div>
+                  <ul [class.corridor-tree-invisible]="!treeControl.isExpanded(node)">
+                    <ng-container matTreeNodeOutlet></ng-container>
+                  </ul>
+                </li>
+              </mat-nested-tree-node>
+
+              <mat-nested-tree-node *matTreeNodeDef="let node; when: isExhibitFiller">
+                <li>
+                  <div class="mat-tree-node">
+                    <button mat-icon-button matTreeNodeToggle>
+                      <mat-icon class="mat-icon-rtl-mirror">
+                        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                      </mat-icon>
+                    </button>
+                    3D Exhibits ({{node.length}})
+                  </div>
+                  <ul [class.corridor-tree-invisible]="!treeControl.isExpanded(node)">
+                    <ng-container matTreeNodeOutlet></ng-container>
+                  </ul>
+                </li>
+              </mat-nested-tree-node>
+
+
+              <mat-nested-tree-node *matTreeNodeDef="let node; when: isWall">
+                <li>
+                  <div [className]="(inspected|async)==node ? 'mat-tree-node selected' : 'mat-tree-node'" (click)="wallClicked($event, node)">
+                    <button mat-icon-button matTreeNodeToggle>
+                      <mat-icon class="mat-icon-rtl-mirror">
+                        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                      </mat-icon>
+                    </button>
+                    {{node.designation}} ({{node.numberOfExhibits}})
+                  </div>
+                  <ul [class.corridor-tree-invisible]="!treeControl.isExpanded(node)">
+                    <ng-container matTreeNodeOutlet></ng-container>
+                  </ul>
+                </li>
+              </mat-nested-tree-node>
+
+              <mat-tree-node *matTreeNodeDef="let node; when: isExhibit" >
+                <div [className]="(inspected|async)==node ? 'mat-tree-node selected' : 'mat-tree-node'" (click)="exhibitClicked($event, node)">
+                  <p>Exhibit: {{node.name}}</p>
+                  <button mat-icon-button (click)="removeExhibitClicked($event, node)" matTooltip="Remove exhibit from '{{node.location}}'."><mat-icon>delete</mat-icon></button>
+                </div>
+              </mat-tree-node>
+            </mat-tree>
+          </div>
         </div>
     </div>
 </mat-drawer-container>
