--- a/src/app/components/exhibitions/edit-exhibition.component.scss
+++ b/src/app/components/exhibitions/edit-exhibition.component.scss
@@ -27,6 +27,13 @@
   border: darkgrey dotted 1px;
 }
 
+.corridor-widget {
+  width: 500px;
+  margin: 10px;
+  padding: 15px;
+  border: darkgrey dotted 1px;
+}
+
 .exhibit-node {
   font-size: 12px;
   color: #444444;
@@ -43,6 +50,17 @@
 
 .room-tree ul,
 .room-tree li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
+
+.corridor-tree-invisible {
+  display: none;
+}
+
+.corridor-tree ul,
+.corridor-tree li {
   margin-top: 0;
   margin-bottom: 0;
   list-style-type: none;
