--- a/src/app/components/exhibitions/inspectors/corridor/corridor-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/corridor/corridor-inspector.component.html
@@ -31,6 +31,7 @@
         </mat-option>
     </mat-select>
 </mat-form-field>
+<p>{{corridor.ceiling}}</p>
 
 <h4 class="mat-h4">Corridor geometry</h4>
 
@@ -41,20 +42,21 @@
 <h4 class="mat-h4">Entrypoint</h4>
 <app-vector3f-input [vector]="corridor.entrypoint" [name]="'Entrypoint'" [show]="[true, false, true]" [labels]="['Entrypoint (x)', null, 'Entrypoint (y)']"></app-vector3f-input>
 
-<h4 class="mat-h4">Corridor connects Rooms:</h4>
+<h4 class="mat-h4">Rooms to connect</h4>
 
 <mat-form-field class="full-width">
-  <mat-select placeholder="Room 1" [(ngModel)]="corridor.connects">
+  <mat-select placeholder="Room 1" [(ngModel)]="corridor.connects[0]">
     <mat-option *ngFor="let room of rooms" [value]="room">
-      {{room}}
+      {{room.text}}
     </mat-option>
   </mat-select>
 </mat-form-field>
+<p>{{corridor.connects}}</p>
 
 <mat-form-field class="full-width">
-  <mat-select placeholder="Room 2" [(ngModel)]="corridor.connects">
+  <mat-select placeholder="Room 2" [(ngModel)]="corridor.connects[1]">
     <mat-option *ngFor="let room of rooms" [value]="room">
-      {{room}}
+      {{room.text}}
     </mat-option>
   </mat-select>
 </mat-form-field>
