--- a/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.html
+++ b/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.html
@@ -17,21 +17,21 @@
   <div class="content" *ngIf="!!(exhibition|async)" (click)="exhibitionClicked($event)">
     <h1 class="mat-h1">Exhibition dashboard: {{(exhibition|async).name}} (ID={{(exhibition|async).shortId}})</h1>
 
-    <div>
-      <button mat-stroked-button color="primary" (click)="addNewRoom()">
-        <mat-icon>add</mat-icon>
-        Add new room
-      </button>
-    </div>
+    <div class="btnWrapper">
+      <div>
+        <button mat-stroked-button color="primary" (click)="addNewRoom()">
+         <mat-icon>add</mat-icon>
+          Add new room
+        </button>
+      </div>
 
-    <!-- add buton here?
-    <div>
-      <button mat-stroked-button color="red" (click)="addNewCorridor()">
-        <mat-icon>add</mat-icon>
-        Add new Corridor
-      </button>
+      <div>
+        <button mat-stroked-button color="primary" (click)="addNewCorridor()">
+          <mat-icon>add</mat-icon>
+          Add new corridor
+        </button>
+      </div>
     </div>
-    -->
 
     <div class="dashboard">
       <div *ngFor="let room of (exhibition|async).rooms" (click)="roomClicked($event, room)" [className]="(inspected|async)==room ? 'room-widget selected' : 'room-widget'">
