--- a/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.scss
+++ b/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.scss
@@ -24,6 +24,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
+  clear: both;
 }
 
 .room-widget {
@@ -52,4 +53,9 @@
   margin-top: 0;
   margin-bottom: 0;
   list-style-type: none;
+}
+
+.btnWrapper div{
+  float: left;
+  margin: 1px;
 }
