--- a/src/app/components/exhibitions/edit-exhibition.component.html
+++ b/src/app/components/exhibitions/edit-exhibition.component.html
@@ -11,18 +11,20 @@
     <div class="content" *ngIf="!!(exhibition|async)" (click)="exhibitionClicked($event)">
         <h1 class="mat-h1">Exhibition dashboard: {{(exhibition|async).name}} (ID={{(exhibition|async).shortId}})</h1>
 
+      <div class="btnWrapper">
         <div>
-            <button mat-stroked-button color="primary" (click)="addNewRoom()">
-                <mat-icon>add</mat-icon>
-                Add new room
-            </button>
+          <button mat-stroked-button color="primary" (click)="addNewRoom()">
+            <mat-icon>add</mat-icon>
+            Add new room
+          </button>
         </div>
 
-      <div>
-        <button mat-stroked-button color="red" (click)="addNewCorridor()">
-          <mat-icon>add</mat-icon>
-          Add new Corridor
-        </button>
+        <div>
+          <button mat-stroked-button color="red" (click)="addNewCorridor()">
+            <mat-icon>add</mat-icon>
+            Add new Corridor
+          </button>
+        </div>
       </div>
 
 
