Modified impl for polygonal rooms

--- a/src/app/components/exhibitions/edit-exhibition.component.html
+++ b/src/app/components/exhibitions/edit-exhibition.component.html
@@ -10,7 +10,7 @@
         <h1 class="mat-h1">Exhibition dashboard: {{(exhibition|async).name}} (ID={{(exhibition|async).shortId}})</h1>
 
         <div>
-            <button mat-stroked-button color="primary" (click)="addNewRoom()">
+            <button mat-stroked-button color="primary" mat-raised-button (click)="addNewRoom()">
                 <mat-icon>add</mat-icon>
                 Add new room
             </button>
