--- a/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
@@ -1,7 +1,7 @@
 
-<div class="full-width" [style.display]="'flex'" [style.justify-content]="'space-around'">
+<!--<div class="full-width" [style.display]="'flex'" [style.justify-content]="'space-around'">
     <app-room-canvas [room]="room" ></app-room-canvas>
-</div>
+</div> -->
 
 <hr/>
 
