Some changes after merging corridor with poly branch

--- a/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.html
+++ b/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.html
@@ -19,7 +19,7 @@
 
     <div class="btnWrapper">
       <div>
-        <button mat-stroked-button color="primary" (click)="addNewRoom()">
+        <button mat-stroked-button color="primary" mat-raised-button (click)="addNewRoom()">
          <mat-icon>add</mat-icon>
           Add new room
         </button>
