--- a/src/app/components/exhibitions/inspectors/corridor/corridor-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/corridor/corridor-inspector.component.html
@@ -1,7 +1,7 @@
 
-<div class="full-width" [style.display]="'flex'" [style.justify-content]="'space-around'">
+<!--<div class="full-width" [style.display]="'flex'" [style.justify-content]="'space-around'">
     <app-corridor-canvas [corridor]="corridor" ></app-corridor-canvas>
-</div>
+</div>-->
 
 <hr/>
 
