--- a/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
@@ -1,9 +1,9 @@
 
 <!--<div class="full-width" [style.display]="'flex'" [style.justify-content]="'space-around'">
     <app-room-canvas [room]="room" ></app-room-canvas>
-</div> -->
+</div>
 
-<hr/>
+<hr/> -->
 
 <h4 class="mat-h4">General properties</h4>
 
@@ -36,7 +36,6 @@
 
 <app-vector3f-input [vector]="room.position" [name]="'Position'"></app-vector3f-input>
 
-<app-vector3f-input [vector]="room.size" [name]="'Size'" [labels]="['Width', 'Height', 'Depth']"></app-vector3f-input>
-
-<h4 class="mat-h4">Entrypoint</h4>
-<app-vector3f-input [vector]="room.entrypoint" [name]="'Entrypoint'" [show]="[true, false, true]" [labels]="['Entrypoint (x)', null, 'Entrypoint (y)']"></app-vector3f-input>
+<mat-form-field class="full-width">
+  <input matInput placeholder="Height" [(ngModel)]="room.height">
+</mat-form-field>
