--- a/src/app/components/exhibitions/dialogues/room-dialogue/room-dialogue.component.html
+++ b/src/app/components/exhibitions/dialogues/room-dialogue/room-dialogue.component.html
@@ -24,7 +24,7 @@
             </mat-dialog-actions>
 
             <p id="ceiling-scale">Ceiling scale: </p>
-            <mat-slider id="ceiling-scaling-slider" thumbLabel tickInterval="1" min="0" max="5" [(ngModel)]="data.Room.ceiling_scale"></mat-slider>
+            <mat-slider id="ceiling-scaling-slider" thumbLabel tickInterval="1" min="0" max="5" step="0.1" [(ngModel)]="data.Room.ceiling_scale" ></mat-slider>
 
           </mat-dialog-content>
 
