--- a/src/app/components/exhibitions/inspectors/wall/wall-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/wall/wall-inspector.component.html
@@ -1,8 +1,8 @@
-<!--<div class="full-width" [style.display]="'flex'" [style.justify-content]="'space-around'">
+<div class="full-width" [style.display]="'flex'" [style.justify-content]="'space-around'">
     <app-wall-canvas [wall]="wall"></app-wall-canvas>
 </div>
 
-<hr/>-->
+<hr/>
 
 <h4 class="mat-h4">General properties</h4>
 
