--- a/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
@@ -39,3 +39,8 @@
 <mat-form-field class="full-width">
   <input matInput placeholder="Height" [(ngModel)]="room.height">
 </mat-form-field>
+
+
+
+<h4 class="mat-h4">Ceiling scale: {{room.ceiling_scale}} </h4>
+<mat-slider id="ceiling-scaling-slider" thumbLabel tickInterval="1" min="0" max="5" step="0.1" [(ngModel)]="room.ceiling_scale" ></mat-slider>
