Did some little change in design

--- a/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.html
+++ b/src/app/components/exhibitions/edit-exhibition-visual/edit-exhibition-visual.component.html
@@ -21,14 +21,14 @@
       <div>
         <button mat-stroked-button color="primary" mat-raised-button (click)="addNewRoom()">
          <mat-icon>add</mat-icon>
-          Add new room
+          Add new Room
         </button>
       </div>
 
       <div>
-        <button mat-stroked-button color="primary" (click)="addNewCorridor()">
+        <button mat-stroked-button color="primary" mat-raised-button (click)="addNewCorridor()">
           <mat-icon>add</mat-icon>
-          Add new corridor
+          Add new Corridor
         </button>
       </div>
     </div>
