--- a/src/app/components/exhibitions/inspectors/wall/wall-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/wall/wall-inspector.component.html
@@ -4,7 +4,7 @@
 
 <hr/>
 
-<h4 class="mat-h4">General properties</h4>
+<h4 class="mat-h4"><b>General properties</b></h4>
 
 <mat-form-field class="full-width">
     <input matInput disabled placeholder="Exhibition" [value]="wall._belongsTo._belongsTo.name"  matTooltip="Name of the exhibition this wall belongs to.">
