--- a/src/app/components/exhibitions/edit-exhibition.component.html
+++ b/src/app/components/exhibitions/edit-exhibition.component.html
@@ -13,14 +13,14 @@
 
       <div class="btnWrapper">
         <div>
-            <button mat-stroked-button color="primary" mat-raised-button (click)="addNewRoom()">
-                <mat-icon>add</mat-icon>
-                Add new room
-            </button>
+          <button mat-stroked-button color="primary" mat-raised-button (click)="addNewRoom()">
+            <mat-icon>add</mat-icon>
+            Add new Room
+          </button>
         </div>
 
         <div>
-          <button mat-stroked-button color="red" (click)="addNewCorridor()">
+          <button mat-stroked-button color="primary" mat-raised-button (click)="addNewCorridor()">
             <mat-icon>add</mat-icon>
             Add new Corridor
           </button>
