--- a/src/app/components/exhibitions/inspectors/exhibit/exhibit-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/exhibit/exhibit-inspector.component.html
@@ -5,7 +5,7 @@
 
 <hr/>
 
-<h4 class="mat-h4">General properties</h4>
+<h4 class="mat-h4"><b>General properties</b></h4>
 
 <mat-form-field class="full-width">
     <input matInput placeholder="Type" [value]="exhibit.type" disabled/>
@@ -19,7 +19,7 @@
     <textarea matInput placeholder="Description" [(ngModel)]="exhibit.description"></textarea>
 </mat-form-field>
 
-<h4 class="mat-h4">Size & Position</h4>
+<h4 class="mat-h4"><b>Size & Position</b></h4>
 
 <mat-form-field class="full-width" *ngIf="exhibit.isOnRoomWall || exhibit.isOnCorridorWall">
     <input matInput placeholder="Location" [value]="exhibit.location" disabled/>
