--- a/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
+++ b/src/app/components/exhibitions/inspectors/room/room-inspector.component.html
@@ -5,7 +5,7 @@
 
 <hr/> -->
 
-<h4 class="mat-h4">General properties</h4>
+<h4 class="mat-h4"><b>General properties</b></h4>
 
 
 <mat-form-field class="full-width">
@@ -32,7 +32,7 @@
     </mat-select>
 </mat-form-field>
 
-<h4 class="mat-h4">Room geometry</h4>
+<h4 class="mat-h4"><b>Room geometry</b></h4>
 
 <app-vector3f-input [vector]="room.position" [name]="'Position'"></app-vector3f-input>
 
